<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">protocoder</string>
    <string name="activity_name">protocoder</string>
    <string name="runner_name">protocoder AppRunner</string>
    <string name="connect_message">Click to connect</string>
    <string name="menu_settings">Settings</string>
    <string name="BT_Home">Connect</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="run">Run</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_moldable">MoldableActivity</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="share">Share code</string>
    <string name="send_to">Send to...</string>
    <string name="beam">NFC Share</string>
    <string name="projects_zero">\nPress + to get started or slide to the right to check the examples</string>
    <string name="start_the_server">Connect to a WIFI and start the server to edit via web-IDE</string>
    <string name="new_project_name_hint">Project name</string>

    <!-- Menu items -->
    <string name="menu_label_new">New</string>
    <string name="menu_label_about">About</string>
    <string name="menu_label_start_server">Start server</string>
    <string name="menu_label_stop_server">Stop server</string>
    <string name="menu_label_settings">Settings</string>

    <!-- Beam -->
    <string name="beaming_file">Beaming file using Android Beam</string>
    <string name="beaming_files">Beaming files using Android Beam</string>
    <string name="beaming_text">Beaming text using Android Beam</string>
    <string name="touch_devices">Touch the two devices to continue…</string>
    <string name="file_sent">File is being beamed, press back to exit</string>
    <string name="about_text">File Beam\n\nA quick application to send any file using Android Beam™\n\n© 2013\nMohammad Abu-Garbeyyeh</string>
    <string name="nfc_not_available">Sorry, your device doesn\'t seem to have an NFC adapter</string>
    <string name="nfc_turned_off">NFC is currently turned off in Settings, please enable it and try to share the file again</string>
    <string name="detail_unknown_content">Unknown content</string>
    <string name="detail_unknown_size">Unknown size</string>
    <string name="detail_unknown_type">Unknown type</string>
    <string name="content_description_image">Image depicting the type of the file that is being beamed</string>
    <string name="multiple_files">Multiple files</string>
    <string name="multiple_file_types">Multiple file types</string>

    <!-- Help/About -->
    <string name="about_activity_name">About</string>
    <string name="about_how_to_title">How-to</string>
    <string name="about_how_to_contents">protocoder is easy to get started.\nAt the bottom of the screen, you\'ll see a little pop-up to show you where to navigate to get started. Make sure yout Android device is on the same network as your computer. Then, open a web browser to that address and you\'ll see a fully-featured editor interface.\n\nThis web IDE is connected directly to your application. With it, you can create new projects, edit existing ones, see live console output, view documentation, and more.</string>

    <!-- Welcome -->
    <string name="welcome_activity_name">protocoder</string>
    <string name="welcome_title">Good to see you.</string>
    <string name="welcome_body">protocoder makes is simple to create, edit and run projects from your Android device or computer at the same time. Just start the app and build from your mobile, or navigate to the displayed URL to edit via a web IDE.\n\nAre you in?</string>
    <string name="welcome_accept">Let\'s go.</string>

    <!-- Settings screen -->
    <string name="setting_about">About</string>
    <string name="setting_opensource_title">Open Source Licenses</string>
    <string name="setting_opensource_description">License Details for open source software</string>
    <string name="settings_activity_name">Settings</string>
    <string name="setting_notifications_title">Notifications</string>
    <string name="setting_show_notifications_title">Show notifications</string>
    <string name="setting_show_notifications_body">Display a persistent notification when the server is running</string>

</resources>