<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeamActivity" >

    <TextView
        android:id="@+id/beamingFileTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/beaming_file"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beamingFileTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:text="@string/touch_devices" />

    <ImageView
        android:id="@+id/defaultIconView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/content_description_image"
        android:gravity="center_horizontal"
        android:src="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/contentTypeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fileNameTextView"
        android:layout_centerHorizontal="true"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:text="@string/detail_unknown_type" />

    <TextView
        android:id="@+id/fileSizeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contentTypeTextView"
        android:layout_below="@+id/contentTypeTextView"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:text="@string/detail_unknown_size" />

    <TextView
        android:id="@+id/fileNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/defaultIconView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:text="@string/detail_unknown_content" />

    <RelativeLayout
        android:id="@+id/adLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layoutSpacer"
        android:gravity="bottom"
        android:layout_marginTop="16dp" >
    </RelativeLayout>

</RelativeLayout>